# embedding_python

./: CMakeLists.txt  README.md
resources/: simple.py
src/: main.cpp
